# dots-ocr-client

./: README.md  pyproject.toml
dots_ocr_client/: __init__.py  parser.py
dots_ocr_client/model/: inference.py
dots_ocr_client/utils/: __init__.py  doc_utils.py  format_transformer.py  image_utils.py  layout_utils.py  output_cleaner.py
tests/: test_data_structure.py  test_import.py  test_replicate_backend.py
